--- a/index.html
+++ b/index.html
@@ -2,15 +2,35 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ТЭС Челябинск</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link href="faviconV2.png" rel="shortcut icon">
+
+    <!-- Primary Meta Tags -->
+    <title>Грузоперевозки по России</title>
+    <meta name="title" content="Грузоперевозки по России" />
+    <meta name="description" content="Автомобильные, железнодорожные, сборные. Складское хранение. Аренда ж/д вагонов" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://test-sharipova.github.io/testrans/" />
+    <meta property="og:title" content="Грузоперевозки по России" />
+    <meta property="og:description" content="Автомобильные, железнодорожные, сборные. Складское хранение. Аренда ж/д вагонов" />
+    <meta property="og:image" content="https://test-sharipova.github.io/testrans/img/openg.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://test-sharipova.github.io/testrans/" />
+    <meta property="twitter:title" content="Грузоперевозки по России" />
+    <meta property="twitter:description" content="Автомобильные, железнодорожные, сборные. Складское хранение. Аренда ж/д вагонов" />
+    <meta property="twitter:image" content="https://test-sharipova.github.io/testrans/img/openg.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
     <header>
