--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="promo__item mobile">
                         <span class="promo__icon promo__icon_9"></span>
                         <p class="promo__text">
-                            <span>Складско<br> хранение груза</span>
+                            <span>Складское<br> хранение груза</span>
                         </p>
                     </div>
                 </div>
