--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 </a>
                 <div class="header__contacts">
                     <span class="header__city">Город:&nbsp;<span>Челябинск</span></span>
-                    <a href="tel:+78007001312" class="header__phone">8 (351) 217-29-79</a>
-                    <a href="tel:+78007001312" class="header__phone">8 (351) 237-22-88</a>
-                    <a href="mailto:info@testrans.ru" class="header__mail">info@testrans.ru</a>
+                    <a href="tel:+79935067701" class="header__phone">+7 (993) 506-77-01</a>
+                    <a href="tel:+79935067710" class="header__phone">+7 (993) 506-77-10</a>
+                    <a href="mailto:dir@tes-tk.ru" class="header__mail">dir@tes-tk.ru</a>
                 </div>
             </div>
         </div>
